--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,11 @@ body {
     font-size: medium;
 }
 
+.card {
+    margin: 1em;
+    padding: 1em;
+}
+
 @media (min-width: 770px) {
     html {
         background-color: lightgray;
@@ -25,6 +30,11 @@ body {
 
     body {
         background-color: lightgray;
+    }
+
+    .card {
+        margin: 1em;
+        padding: 1em;
     }
 
 }
