--- a/css/main.css
+++ b/css/main.css
@@ -7,29 +7,34 @@ button {
 
 html {
     height: 100%; 
-    margin: 1em; 
-    background-color: khaki;
+    margin: 1em;
+    background-color: lightgray;
 }
 
 body {
-    background-color: khaki;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-variant: small-caps;
     font-size: medium;
+    background-color: lightgray;
+}
+
+h5 {
+    text-decoration: underline;
 }
 
 .card {
     margin: 1em;
     padding: 1em;
+    border: solid 1px black;
 }
 
 @media (min-width: 770px) {
     html {
-        background-color: lightgray;
+        background-color: lightslategray;
     }
 
     body {
-        background-color: lightgray;
+        background-color: lightslategray;
     }
 
     .card {
